--- a/lib/views/database.html
+++ b/lib/views/database.html
@@ -28,6 +28,7 @@
         <span class="glyphicon glyphicon-eye-open"></span><br>View
       </a>
     </td>
+    {% if settings.exportTools %}
     <td class="col-md-1">
        <a href="{{ baseHref }}db/{{ dbName }}/export/{{ c }}" class="btn btn-warning btn-block">
         <span class="glyphicon glyphicon-floppy-save"></span><br>Export
@@ -38,6 +39,7 @@
         <span class="glyphicon glyphicon-floppy-save"></span><br>[JSON]
       </a>
     </td>
+    {% endif %}
     <td><h3><a href="{{ baseHref }}db/{{ dbName }}/{{ c }}">{{ c }}</a></h3></td>
     {% if !settings.read_only %}
     <td class="col-md-1">
