--- a/lib/views/collection.html
+++ b/lib/views/collection.html
@@ -241,7 +241,7 @@ renderjson.set_show_to_level({{ collapsibleJSONDefaultUnfold }});
     </ul>
   {% endif %}
 
-  <div class="fadeToWhite"></div>
+  <!-- <div class="fadeToWhite"></div> -->
   <div class="table-responsive tableWrapper">
     <table class="table table-striped tableHeaderFooterBars">
       <thead>
